@@ -1,4 +1,5 @@
-AUX emacs-daemon.rc 1120 RMD160 06704b95a4aabbdbf6e249e4fd300b00b3f0307f SHA1 af909fef80fa8d10c08fbdd194d595c673878575 SHA256 dfba684f5899607c8d966a903511920156f3d70da1d2608e1ae0ceccafb15da2
-EBUILD emacs-daemon-0.2.ebuild 830 RMD160 a259a589dd0ed4551ee97c585f7d40bd1946abf7 SHA1 d78d15eeddb15e15e46fbc19d203fe739d3c64aa SHA256 21cbb84adf04f2200f242d7d732026dbf991b238074afe10f6dbfb1161b054e3
-MISC ChangeLog 690 RMD160 544295c5eb856bc7a95cd12f0362e8cd08b15441 SHA1 1852a602f06f164df54a0c3f0ad977279db84612 SHA256 f309a7d627c3ea8690e95536c3d2686dc5c0468405e973e2763fdc3e359e2ec8
+AUX 10emacs-daemon-gentoo.el 310 RMD160 44d1732cc476e0e3b8f7db5b1fcf2535cc33341e SHA1 94c1488050e043a674dd95448383c9a8a9bd918d SHA256 f4437e9ec33c87a8bf8b54d37489efef4491fdeaa9558528d9ea5e0fdb9f7a5c
+AUX emacs-daemon.rc 1510 RMD160 c6ee30b530cf40b1f7eae8446637591a77c36db8 SHA1 7b28a96197e19018b03214f76987c6136feb3a21 SHA256 99af924ca961c2f21070312de041e6a21a9a38488603004048a8272bfafe1326
+EBUILD emacs-daemon-0.3.ebuild 903 RMD160 96bd56cd69bb3412616a6fc4675d4ee6e87bf5ef SHA1 e7a63b38b431c9d44decb54df6bef40c374623b9 SHA256 bee5ac4de829079620ab8a7f79721dda7671c49664f5e3b4edc3b8adba54f25d
+MISC ChangeLog 911 RMD160 a118a8d8df4717ef1591e01f94a76e71fabf429d SHA1 9fd103f3fbdd5b03b4c1a084f68dcd8c3b776fd9 SHA256 09db5d0a537936c15cdc64309d4775ab40d7c37b13ebec8681965faadd3c2da8
 MISC metadata.xml 158 RMD160 415d172437ca754d24fc5ab186ba8e77934d96e4 SHA1 61f6eff9729cd87a725c2a70c81aca4270a17fc4 SHA256 1393bdef3a74343fdb40a112c7096a1af16f67e7a43413250de28dfe73810eab
